Mongodb: native build fails because of CredentialsProviderFinder

--- a/extensions-support/mongodb/runtime/pom.xml
+++ b/extensions-support/mongodb/runtime/pom.xml
@@ -45,6 +45,14 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-mongodb-client</artifactId>
         </dependency>
+        <!--
+       We need this dependency to make mongodb compile in native (contains CredentialsProviderFinder).
+       Quarkus side is solved by optional dependency 'quarkus-smallrye-health'
+       -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-credentials</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
