Force Oracle devservices image to gvenzl/oracle-free:23.2-slim due to #5353

--- a/integration-test-groups/jdbc/oracle/src/main/resources/application.properties
+++ b/integration-test-groups/jdbc/oracle/src/main/resources/application.properties
@@ -20,5 +20,7 @@
 #
 quarkus.datasource.oracle.db-kind=oracle
 quarkus.datasource.oracle.jdbc.max-size=8
-
+# TODO: Remove image override when issues in 23.3-slim are fixed
+# https://github.com/apache/camel-quarkus/issues/5353
+quarkus.datasource.oracle.devservices.image-name=gvenzl/oracle-free:23.2-slim
 quarkus.native.resources.includes=postgresql.sql,mysql.sql,mariadb.sql,oracle.sql,h2.sql,db2.sql,inserts.sql,mssql.sql,droptables.sql
