--- a/extensions/aws2-cw/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-cw/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 CloudWatch"
-description: "Sending metrics to AWS CloudWatch using AWS SDK version 2.x"
+description: "Sending metrics to AWS CloudWatch"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
