--- a/extensions/aws2-ec2/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-ec2/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 Elastic Compute Cloud (EC2)"
-description: "Manage AWS EC2 instances using AWS SDK version 2.x"
+description: "Manage AWS EC2 instances"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
