--- a/extensions/aws2-eks/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-eks/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 Elastic Kubernetes Service (EKS)"
-description: "Manage AWS EKS cluster instances using AWS SDK version 2.x"
+description: "Manage AWS EKS cluster instances"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
