--- a/extensions/aws2-kms/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-kms/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 Key Management Service (KMS)"
-description: "Manage keys stored in AWS KMS instances using AWS SDK version 2.x"
+description: "Manage keys stored in AWS KMS instances"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
