--- a/extensions/aws2-msk/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-msk/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 Managed Streaming for Apache Kafka (MSK)"
-description: "Manage AWS MSK instances using AWS SDK version 2.x"
+description: "Manage AWS MSK instances"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
