--- a/extensions/aws2-ses/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-ses/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 Simple Email Service (SES)"
-description: "Send e-mails through AWS SES service using AWS SDK version 2.x"
+description: "Send e-mails through AWS SES service"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
