--- a/extensions/aws2-sns/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-sns/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 Simple Notification System (SNS)"
-description: "Send messages to an AWS Simple Notification Topic using AWS SDK version 2.x"
+description: "Send messages to AWS Simple Notification Topic"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
