--- a/extensions/aws2-sqs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/aws2-sqs/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel AWS 2 Simple Queue Service (SQS)"
-description: "Send and receive messages to/from AWS SQS service using AWS SDK version 2.x"
+description: "Send and receive messages to/from AWS SQS"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   keywords:
