Improve descriptions for xml-jaxp & yaml-io extensions
Fixes #5361

--- a/extensions-core/yaml-io/runtime/pom.xml
+++ b/extensions-core/yaml-io/runtime/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>camel-quarkus-yaml-io</artifactId>
     <name>Camel Quarkus :: YAML IO :: Runtime</name>
-    <description>YAML IO</description>
+    <description>Dump routes in YAML format</description>
 
     <properties>
         <camel.quarkus.jvmSince>3.2.0</camel.quarkus.jvmSince>
