--- a/extensions-core/xml-jaxp/runtime/pom.xml
+++ b/extensions-core/xml-jaxp/runtime/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>camel-quarkus-xml-jaxp</artifactId>
     <name>Camel Quarkus :: XML JAXP :: Runtime</name>
-    <description>Camel XML JAXP</description>
+    <description>XML JAXP type converters and parsers</description>
 
     <properties>
         <camel.quarkus.jvmSince>1.0.0</camel.quarkus.jvmSince>
