--- a/extensions-core/yaml-io/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions-core/yaml-io/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel YAML IO"
-description: "YAML IO"
+description: "Dump routes in YAML format"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
   guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/yaml-io.html"
