Prevent camel-k extension name metadata showing as 'Camel Camel K'

--- a/tooling/create-extension-templates/quarkus-extension.yaml
+++ b/tooling/create-extension-templates/quarkus-extension.yaml
@@ -21,7 +21,7 @@
 #   mvn -N cq:update-quarkus-metadata
 #
 ---
-name: "Camel [=nameBase]"
+name: "[#if !nameBase?starts_with("Camel")]Camel [/#if][=nameBase]"
 description: "[=description]"
 icon-url: "https://camel.apache.org/_/img/logo-d-f21b25ba38.svg"
 metadata:
