--- a/extensions/kafka/runtime/pom.xml
+++ b/extensions/kafka/runtime/pom.xml
@@ -47,6 +47,11 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-kafka</artifactId>
         </dependency>
+        <!-- Required for the native build of the simple app with this extension only -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-vertx</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
