--- a/poms/bom-test/pom.xml
+++ b/poms/bom-test/pom.xml
@@ -82,6 +82,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.camel.quarkus</groupId>
+                <artifactId>camel-quarkus-integration-tests-support-custom-kamelet-resource</artifactId>
+                <version>${camel-quarkus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.camel.quarkus</groupId>
                 <artifactId>camel-quarkus-integration-tests-support-activemq</artifactId>
                 <version>${camel-quarkus.version}</version>
             </dependency>
