Change description of this project which is presented in google result

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -16,7 +16,7 @@
 #
 
 github:
-  description: "Apache Camel Quarkus support"
+  description: "Apache Camel Quarkus"
   homepage: https://camel.apache.org
   labels:
     - camel
