--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -29,7 +29,7 @@ asciidoc:
 
     # Project versions
     camel-version: 4.1.0 # replace ${camel.version}
-    camel-docs-version: 4.0.x # replace ${camel.docs.components.version}
+    camel-docs-version: 4.0.x
     quarkus-version: 3.5.0.CR1 # replace ${quarkus.version}
     graalvm-version: 23.0.1 # replace ${graalvm.version}
     graalvm-docs-version: jdk17
