--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -28,7 +28,7 @@ asciidoc:
     requires: "'util=camel-website-util,quarkus=xref:js/quarkus.js'"
 
     # Project versions
-    camel-version: 4.1.0 # replace ${camel.version}
+    camel-version: 4.2.0-SNAPSHOT # replace ${camel.version}
     camel-docs-version: 4.0.x
     quarkus-version: 3.5.0.CR1 # replace ${quarkus.version}
     graalvm-version: 23.0.1 # replace ${graalvm.version}
