--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -6156,6 +6156,14 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <!-- TODO: Remove this: https://github.com/quarkusio/quarkus/issues/22418 -->
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protoc</artifactId>
+                <version>${protobuf.version}</version>
+                <classifier>linux-ppcle_64</classifier>
+                <type>exe</type>
+            </dependency>
             <dependency>
                 <groupId>com.ibm.icu</groupId>
                 <artifactId>icu4j</artifactId>
@@ -6247,6 +6255,14 @@
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-jmx</artifactId>
                 <version>${dropwizard-metrics.version}</version>
+            </dependency>
+            <!-- TODO: Remove this: https://github.com/quarkusio/quarkus/issues/22418 -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>protoc-gen-grpc-java</artifactId>
+                <version>${grpc.version}</version>
+                <classifier>linux-ppcle_64</classifier>
+                <type>exe</type>
             </dependency>
             <dependency>
                 <groupId>io.minio</groupId>
@@ -6921,6 +6937,8 @@
                                 <resolutionEntryPointInclude>com.ibm.mq:com.ibm.mq.jakarta.client</resolutionEntryPointInclude>
                                 <resolutionEntryPointInclude>com.ibm.icu:icu4j</resolutionEntryPointInclude>
                                 <resolutionEntryPointInclude>org.mapstruct:mapstruct-processor</resolutionEntryPointInclude>
+                                <resolutionEntryPointInclude>io.grpc:protoc-gen-grpc-java:*</resolutionEntryPointInclude>
+                                <resolutionEntryPointInclude>com.google.protobuf:protoc:*</resolutionEntryPointInclude>
                             </resolutionEntryPointIncludes>
                             <bannedDependencyResources>
                                 <bannedDependencyResource>
