--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -30,12 +30,12 @@ asciidoc:
     # Project versions
     camel-version: 4.1.0 # replace ${camel.version}
     camel-docs-version: 4.0.x
-    quarkus-version: 3.5.0.CR1 # replace ${quarkus.version}
+    quarkus-version: 3.5.0 # replace ${quarkus.version}
     graalvm-version: 23.0.1 # replace ${graalvm.version}
     graalvm-docs-version: jdk17
     mapstruct-version: 1.5.5.Final # replace ${mapstruct.version}
     min-maven-version: 3.8.2 # replace ${min-maven-version}
-    target-maven-version: 3.9.3 # replace ${target-maven-version}
+    target-maven-version: 3.9.5 # replace ${target-maven-version}
 
     # Attributes used in xrefs to other Antora components
     cq-camel-components: components
