Disable groovy-dsl native profile due to #5441

--- a/integration-tests/groovy-dsl/pom.xml
+++ b/integration-tests/groovy-dsl/pom.xml
@@ -167,6 +167,7 @@
                 </dependency>
             </dependencies>
         </profile>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5441
         <profile>
             <id>native</id>
             <activation>
@@ -194,6 +195,7 @@
                 </plugins>
             </build>
         </profile>
+        -->
     </profiles>
 
 </project>
