--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -26,7 +26,9 @@ on:
       - "[0-9]+.[0-9]+.x"
     paths-ignore:
       - '**.adoc'
+      - '**.md'
       - 'Jenkinsfile'
+      - 'Jenkinsfile.*'
       - 'KEYS'
       - 'LICENSE.txt'
       - 'NOTICE.txt'
