--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -30,6 +30,7 @@ asciidoc:
     # Project versions
     camel-version: 4.1.0 # replace ${camel.version}
     camel-docs-version: 4.0.x
+    camel-quarkus-version: 3.6.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.5.0 # replace ${quarkus.version}
     graalvm-version: 23.0.1 # replace ${graalvm.version}
     graalvm-docs-version: jdk17
