--- a/integration-tests/master-openshift/pom.xml
+++ b/integration-tests/master-openshift/pom.xml
@@ -32,6 +32,8 @@
 
     <properties>
         <quarkus.runner>${project.build.directory}/quarkus-app/quarkus-run.jar</quarkus.runner>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5515 -->
+        <ci.native.tests.skip>true</ci.native.tests.skip>
     </properties>
 
     <dependencies>
@@ -115,7 +117,7 @@
         <profile>
             <id>ci</id>
             <properties>
-                <quarkus.native.native-image-xmx>5g</quarkus.native.native-image-xmx>
+                <quarkus.native.native-image-xmx>6g</quarkus.native.native-image-xmx>
             </properties>
         </profile>
         <profile>
@@ -154,7 +156,6 @@
                 </plugins>
             </build>
         </profile>
-        <!-- disabled because of https://github.com/apache/camel-quarkus/issues/5447
          <profile>
              <id>native</id>
              <activation>
@@ -192,7 +193,6 @@
                  </plugins>
              </build>
          </profile>
-        -->
          <profile>
              <id>virtualDependencies</id>
              <activation>
