Fix #5453 to introduce camel-spring-redis extension

--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -92,6 +92,7 @@
         <module>smpp</module>
         <module>snmp</module>
         <module>splunk-hec</module>
+        <module>spring-redis</module>
         <module>stitch</module>
         <module>stomp</module>
         <module>stub</module>
