Add basic test coverage for transformer EIP

--- a/integration-test-groups/foundation/pom.xml
+++ b/integration-test-groups/foundation/pom.xml
@@ -55,6 +55,7 @@
         <module>seda</module>
         <module>stream</module>
         <module>timer</module>
+        <module>transformer</module>
         <module>type-converter</module>
     </modules>
 
